--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
   background: purple;
 }
 
+/* rules */
 .info_box {
   position: absolute;
   display: -webkit-box;
@@ -91,7 +92,7 @@ body {
   cursor: pointer;
 }
 
-.info_box .restart {
+.info_box .start {
   color: white;
   border-color: #ef6f04;
   background: #ef6f04;
@@ -100,7 +101,7 @@ body {
   transition: all 1s ease;
 }
 
-.info_box .restart:hover {
+.info_box .start:hover {
   border-color: purple;
   background: purple;
 }
@@ -118,8 +119,11 @@ body {
   background: red;
 }
 
+/* fin des rules */
+/* bouton theme */
 .start_btn {
   position: absolute;
+  display: none;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -138,10 +142,10 @@ body {
   cursor: pointer;
 }
 
+/* fin du bouton theme */
+/* theme */
 .theme {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -175,4 +179,40 @@ body {
 
 .theme button:hover {
   color: purple;
+}
+
+/*fin du theme 
+
+/* timer */
+.base-timer {
+  position: relative;
+  height: 300px;
+  width: 300px;
+}
+
+.base-timer .base-timer__circle {
+  fill: none;
+  stroke: none;
+}
+
+.base-timer .base-timer__circle .base-timer__path-elapsed {
+  stroke-width: 7px;
+  stroke: #ef6f04;
+}
+
+.base-timer .base-timer__circle .base-timer__path-elapsed .base-timer__label {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 48px;
 }
